projetGL/src/test/deca/syntax/invalid/ourTests/test_float_max.deca
{
    float a = 3.4028236E+38; // 3.4028235E+38 on atteint le max
}
